--- a/src/PagePayment.html
+++ b/src/PagePayment.html
@@ -6,6 +6,6 @@
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-red-400">Payment</h1>
+    <h1 class="text-3xl font-bold underline text-blue-400">Payment</h1>
   </body>
 </html>
